# workshop-data-validation

./: .gitignore  README.md  data.xlsx  main.py  requirements.txt  schemas.py  setup.cfg  utils.py
docs/: data-validation-workshop.odp  mip_template_formulation.ipynb
mip_template/: __init__.py  __main__.py  action_data_prep.py  action_report_builder.py  main.py  schemas.py
test_mip_template/: README.md  test_local_execution.py  test_mip_template.py  utils.py
test_mip_template/data/testing_data/: testing_data.json
